[gd_scene load_steps=6 format=3 uid="uid://i2sd4y0dv6y4"]

[ext_resource type="Script" path="res://enemy/boss/salt_and_pepper/salt_grenade.gd" id="1_l41xd"]
[ext_resource type="AudioStream" uid="uid://cbmhhwmpkrs3m" path="res://sounds/DSGNWhsh_Short Whip, Short Whoosh 20_Ocular Sounds_Quick Whips_The Complete Whooshes Collection.wav" id="2_bre8e"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_aru7e"]
bounce = 0.7

[sub_resource type="SphereMesh" id="SphereMesh_lbych"]
radius = 0.35
height = 0.7

[sub_resource type="SphereShape3D" id="SphereShape3D_a5cnj"]
radius = 0.35

[node name="SaltGrenade" type="RigidBody3D" groups=["enemy_projectiles"]]
physics_material_override = SubResource("PhysicsMaterial_aru7e")
continuous_cd = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_l41xd")

[node name="GrenadeMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_lbych")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_a5cnj")

[node name="BounceSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bre8e")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
